= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/sysexits-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2022-05-30

=== Added

* Add doctest to each variant of `SysExits`
* Add section about usage to README

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-05-28

=== Added

* Initial release